@@ -26,7 +26,7 @@ Plugin 'chrisbra/vim-diff-enhanced'
 Plugin 'gmarik/Vundle.vim'
 Plugin 'honza/vim-snippets'
 Plugin 'itchyny/calendar.vim'
-"Plugin 'jeaye/color_coded'
+Plugin 'jeaye/color_coded'
 Plugin 'jlanzarotta/bufexplorer'
 Plugin 'kien/rainbow_parentheses.vim'
 Plugin 'Lokaltog/vim-easymotion'
@@ -35,7 +35,7 @@ Plugin 'Matt-Deacalion/vim-systemd-syntax'
 Plugin 'mbbill/fencview'
 Plugin 'mileszs/ack.vim'
 Plugin 'ntpeters/vim-better-whitespace'
-Plugin 'octol/vim-cpp-enhanced-highlight'
+"Plugin 'octol/vim-cpp-enhanced-highlight'
 Plugin 'plasticboy/vim-markdown'
 "Plugin 'Rip-Rip/clang_complete'
 Plugin 'scrooloose/nerdcommenter'
